<resources>
    <string name="app_name">Recipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="recipes">Recipes</string>
    <string name="profile">Profile</string>
    <string name="welcome">Welcome</string>
    <string name="details">Details</string>
    <string name="nutrition">Nutrition</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="textview">TextView</string>
    <string name="rating">Rating:</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="to_recipehub">To RecipeHub</string>
</resources>