<?xml version="1.0" encoding="utf-8"?>
<!-- fragment_recipe_detail.xml -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/detailImage"
        android:layout_width="355dp"
        android:layout_height="175dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/detailTitle"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="cursive"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ingredients"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/primary_color"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredientsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/instructions"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/primary_color"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/instructionRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:text="@string/nutrition"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/primary_color"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Fiber"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fiberView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10px"
            android:text="TextView"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Protein"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/proteinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10px"
            android:text="TextView"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/fiberView" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Fat"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/fatView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10px"
            android:text="TextView"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/proteinView" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Calories"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/caloriesView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10px"
            android:text="TextView"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/fatView" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Sugar"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/sugarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10px"
            android:text="TextView"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/caloriesView" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Carbohydrates"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/carbohydratesView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="TextView"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/sugarView"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
</ScrollView>
